--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -6,15 +6,9 @@
 //在此处配置无线网络环境下的代理模式，参考如下配置。
 [DNS]
 [REWRITE]
-^https?://www.google.cn url 302 https://www.google.com
-^https?://(www.)?g.cn url 302 https://www.google.com
+
 [URL-REJECTION]
 [TCP]
-//me
-HOST-SUFFIX,lxysh.co,DIRECT
-HOST-SUFFIX,v2ex.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,flurry.com,REJECT
-HOST-SUFFIX,lnk0.com,REJECT
 // Apple
 URL-REGEX,*apple.com/cn,🍎 Only
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,🍎 Only // Settings
@@ -44,8 +38,65 @@ IP-CIDR,17.0.0.0/8,🍎 Only
 HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
 HOST,gspe1-ssl.ls.apple.com,DIRECT
 HOST,audid-api.taobao.com,REJECT
-//REJECT
-// Advertisement-and-Tracking-Protections
+HOST-SUFFIX,appodeal.com,REJECT
+HOST-SUFFIX,applvn.com,REJECT
+HOST,audid-api.taobao.com,REJECT
+HOST-SUFFIX,btrace.qq.com,REJECT
+HOST-SUFFIX,e.qq.com,REJECT
+HOST-SUFFIX,l.qq.com,REJECT
+HOST-SUFFIX,mi.gdt.qq.com,REJECT
+HOST-SUFFIX,mtrace.qq.com,REJECT
+HOST-SUFFIX,pingma.qq.com,REJECT
+HOST-SUFFIX,googletagservices.com,REJECT
+HOST,www.gstatic.com,REJECT
+HOST-SUFFIX,31.media.tumblr.com,REJECT
+HOST-SUFFIX,92x.tumblr.com,REJECT
+HOST-SUFFIX,its-dori.tumblr.com,REJECT
+HOST-SUFFIX,tumblrprobes.cedexis.com,REJECT
+HOST-SUFFIX,tumblrreports.cedexis.com,REJECT
+HOST-SUFFIX,p.twitter.com,REJECT
+HOST-SUFFIX,scribe.twitter.com,REJECT
+HOST-SUFFIX,syndication.twitter.com,REJECT
+HOST-SUFFIX,syndication-o.twitter.com,REJECT
+HOST-SUFFIX,urls.api.twitter.com,REJECT
+HOST-SUFFIX,btrace.qq.com,REJECT
+HOST-SUFFIX,e.qq.com,REJECT
+HOST-SUFFIX,l.qq.com,REJECT
+HOST-SUFFIX,mi.gdt.qq.com,REJECT
+HOST-SUFFIX,mtrace.qq.com,REJECT
+HOST-SUFFIX,pingma.qq.com,REJECT
+HOST-SUFFIX,acs4baichuan.m.taobao.com,REJECT
+HOST-SUFFIX,adash.man.aliyuncs.com,REJECT
+HOST-SUFFIX,adashbc.ut.taobao.com,REJECT
+HOST-SUFFIX,adash-c.ut.taobao.com,REJECT
+HOST-SUFFIX,adashxgc.ut.taobao.com,REJECT
+HOST-SUFFIX,apoll.m.taobao.com,REJECT
+HOST-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
+HOST-SUFFIX,c-nfa.jd.com,REJECT
+HOST-SUFFIX,cps.360buy.com,REJECT
+HOST-SUFFIX,jzt.jd.com,REJECT
+HOST-SUFFIX,stat.m.jd.com,REJECT
+HOST-SUFFIX,img-x.jd.com,REJECT
+HOST,aoscdn.amap.com,REJECT
+HOST,page.amap.com,REJECT
+HOST,sync.amap.com,REJECT
+HOST,mps.amap.com,REJECT
+HOST,aos-cdn-image.amap.com,REJECT
+HOST,wb.amap.com,REJECT
+HOST,f.amap.com,REJECT
+HOST,free-store.is.autonavi.com,REJECT
+HOST,oss.amap.com,REJECT
+HOST,store.is.autonavi.com,REJECT
+HOST,sns.amap.com,REJECT
+HOST,umdc.aliapp.org,REJECT
+HOST,iconfactory.com,REJECT
+HOST-SUFFIX,ehg-youtube.hitbox.com,REJECT
+HOST-SUFFIX,nicorette.co.kr,REJECT
+HOST-SUFFIX,youtube.112.2o7.net,REJECT
+HOST,ogma.iad.appboy.com,REJECT
+HOST-SUFFIX,hockeyapp.net,REJECT
+HOST-SUFFIX,flurry.com,REJECT
+HOST-SUFFIX,lnk0.com,REJECT
 HOST-SUFFIX,adinall.com,REJECT
 HOST-SUFFIX,adjust.com,REJECT
 HOST-SUFFIX,adlefee.com,REJECT
@@ -53,16 +104,13 @@ HOST-SUFFIX,admaster.com.cn,REJECT
 HOST-SUFFIX,adview.cn,REJECT
 HOST-SUFFIX,aerserv.com,REJECT
 HOST-SUFFIX,alipaylog.com,REJECT
-HOST-SUFFIX,amazon-adsystem.com,REJECT
 HOST-SUFFIX,appadhoc.com,REJECT
 HOST-SUFFIX,appsflyer.com,REJECT
 HOST-KEYWORD,cnzz,REJECT
 HOST-SUFFIX,cocounion.com,REJECT
 HOST-SUFFIX,crwdcntrl.net,REJECT
 HOST-SUFFIX,ctrmi.com,REJECT
-HOST-SUFFIX,doubleclick.net,REJECT
-HOST-SUFFIX,googleadservices.com,REJECT
-HOST-SUFFIX,googleadsserving.cn,REJECT
+HOST-KEYWORD,doubleclick,REJECT
 HOST-KEYWORD,analytics,REJECT
 HOST-SUFFIX,googlesyndication.com,REJECT
 HOST-SUFFIX,growingio.com,REJECT
@@ -71,7 +119,6 @@ HOST-SUFFIX,inmobi.com,REJECT
 HOST-SUFFIX,irs01.com,REJECT
 HOST-SUFFIX,kejet.net,REJECT
 HOST-SUFFIX,miaozhen.com,REJECT
-HOST-SUFFIX,moatads.com,REJECT
 HOST-SUFFIX,mobileapptracking.com,REJECT
 HOST-SUFFIX,mopub.com,REJECT
 HOST-SUFFIX,qchannel01.cn,REJECT
@@ -84,20 +131,13 @@ HOST-SUFFIX,tuanxue360.net,REJECT
 HOST-SUFFIX,udrig.com,REJECT
 HOST-KEYWORD,umeng,REJECT
 HOST-SUFFIX,umengcloud.com,REJECT
-HOST-SUFFIX,voiceads.cn,REJECT
 HOST-SUFFIX,xdrig.com,REJECT
-HOST-SUFFIX,iadsdk.apple.com,REJECT
 HOST,ad.12306.cn,REJECT
 HOST,ad.caiyunapp.com,REJECT
 HOST,ad.jiemian.com,REJECT
 HOST,ad-cn.jovcloud.com,REJECT
 HOST,adnew.wifi8.com,REJECT
 HOST,adplatform.vrtcal.com,REJECT
-HOST,ads.nexage.com,REJECT
-HOST,ads.simplepath.com,REJECT
-HOST,adshow.58.com,REJECT
-HOST,adshows.21cn.com,REJECT
-HOST,ads-twitter.com,REJECT
 HOST,adui.tg.meitu.com,REJECT
 HOST,adxserver.ad.cmvideo.cn,REJECT
 HOST,cdn.segment.com,REJECT
@@ -107,42 +147,32 @@ HOST,js.users.51.la,REJECT
 HOST,static.jpush.cn,REJECT
 HOST,sugar.zhihu.com,REJECT
 HOST,track.58.com,REJECT
-// Baidu
 HOST-SUFFIX,baidustatic.com,REJECT
 HOST,hm.baidu.com,REJECT
 HOST,hmma.baidu.com,REJECT
-HOST,mobads.baidu.com,REJECT
-HOST,mobads-logs.baidu.com,REJECT
 HOST,wn.pos.baidu.com,REJECT
-// Baidu-High-ACC-IP
 HOST,ps.map.baidu.com,REJECT
 HOST,sv.map.baidu.com,REJECT
 HOST,offnavi.map.baidu.com,REJECT
 HOST,newvector.map.baidu.com,REJECT
 HOST,ulog.imap.baidu.com,REJECT
 HOST,newloc.map.n.shifen.com,REJECT
-// Ali
 HOST,acs4baichuan.m.taobao.com,REJECT
 HOST,adash-c.ut.taobao.com,REJECT
 HOST,adashxgc.ut.taobao.com,REJECT
 HOST,adashbc.ut.taobao.com,REJECT
 HOST,adash.man.aliyuncs.com,REJECT
 HOST,apoll.m.taobao.com,REJECT
-HOST,amdc.m.taobao.com,REJECT
-// Tencent
 HOST-SUFFIX,e.qq.com,REJECT
 HOST-SUFFIX,l.qq.com,REJECT
 HOST,pingma.qq.com,REJECT
 HOST,mi.gdt.qq.com,REJECT
 HOST,btrace.qq.com,REJECT
 HOST,mtrace.qq.com,REJECT
-// 163
 HOST-SUFFIX,analytics.126.net,REJECT
 HOST,iadmat.nosdn.127.net,REJECT
 HOST,static.ws.126.net,REJECT
-// AutoNavi
 HOST,nbsdk-baichuan.alicdn.com,REJECT
-// iQiyi
 HOST-SUFFIX,cupid.iqiyi.com,REJECT
 HOST,ifacelog.iqiyi.com,REJECT
 HOST,mbdlog.iqiyi.com,REJECT
@@ -151,31 +181,22 @@ IP-CIDR,101.227.97.240/32,REJECT,no-resolve
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-// Youku
 HOST-SUFFIX,atm.youku.com,REJECT
 HOST,ad.mobile.youku.com,REJECT
 HOST,iyes.youku.com,REJECT
-// SohuVideo
 HOST-SUFFIX,aty.sohu.com,REJECT
 HOST,imp.optaim.com,REJECT
 HOST,v2.reachmax.cn,REJECT
 HOST,data.vod.itc.cn,REJECT
-// PPTV
 HOST,asimgs.pplive.cn,REJECT
-// XiMaLaYa
 HOST,ad.ximalaya.com,REJECT
-// Moji
 HOST,ad.api.moji.com,REJECT
 HOST,v1.log.moji.com,REJECT
-// Photoable
 HOST,regist.fotoable.com,REJECT
 HOST,cdn.adapi.fotoable.com,REJECT
-HOST,adapi-analytics.fotoable.net,REJECT
-// UC
 HOST,adtrack.ucweb.com,REJECT
 HOST,applogios.uc.cn,REJECT
 HOST,track.uc.cn,REJECT
-// Internet Service Provider Hijack
 HOST-SUFFIX,17gouwuba.com,REJECT
 HOST-SUFFIX,285680.com,REJECT
 HOST-SUFFIX,51chumoping.com,REJECT
@@ -200,7 +221,6 @@ HOST-SUFFIX,sg536.cn,REJECT
 HOST-SUFFIX,topitme.com,REJECT
 HOST-SUFFIX,tuipenguin.com,REJECT
 IP-CIDR,47.89.59.182/32,REJECT,no-resolve
-// Blacklist
 HOST-SUFFIX,abbyychina.com,REJECT
 HOST-SUFFIX,bartender.cc,REJECT
 HOST-SUFFIX,betterzip.net,REJECT
@@ -300,7 +320,6 @@ HOST-SUFFIX,report.vip.qq.com,REJECT
 HOST-SUFFIX,report.huatuo.qq.com,REJECT
 HOST-SUFFIX,report.qcloud.com,REJECT
 HOST-SUFFIX,googletagmanager.com,REJECT
-HOST-SUFFIX,stats.g.doubleclick.net,REJECT
 HOST-SUFFIX,hpd.baidu.com,REJECT
 HOST-KEYWORD,admarvel,REJECT
 HOST-KEYWORD,admaster,REJECT
@@ -333,14 +352,6 @@ HOST-KEYWORD,umtrack,REJECT
 HOST-KEYWORD,usage,REJECT
 HOST-KEYWORD,wlmonitor,REJECT
 HOST-KEYWORD,zjtoolbar,REJECT
-//Google
-HOST-SUFFIX,fonts.googleapis.com,DIRECT
-HOST-SUFFIX,fonts.gstatic.com,DIRECT
-IP-CIDR,67.198.55.0/24,PROXY,no-resolve
-IP-CIDR,91.108.0.0/16,PROXY,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.0.0/16,PROXY,no-resolve
-IP-CIDR,74.125.23.127/32,PROXY,no-resolve
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -469,10 +480,116 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+IP-CIDR,198.11.189.2/32,DIRECT,no-resolve
+HOST-SUFFIX,lxysh.co,DIRECT
+HOST-SUFFIX,cmbchina.com,DIRECT
+HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
+HOST-SUFFIX,36krcnd.com,DIRECT
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
+USER-AGENT,BBCiPlayer*,PROXY
+HOST-KEYWORD,co.uk,PROXY
+HOST-KEYWORD,uk-live,PROXY
+HOST-SUFFIX,bbc.co,PROXY
+HOST-SUFFIX,bbc.com,PROXY
+HOST-SUFFIX,feedly.com,PROXY,resolve-on-proxy
+HOST-KEYWORD,speedtest,PROXY
+HOST-SUFFIX,playno1.com,PROXY
+HOST-SUFFIX,qrrro.com,PROXY
+HOST-SUFFIX,sub.ssr.sx,PROXY
+HOST-SUFFIX,ssr.ac,PROXY
+HOST-SUFFIX,manhuagui.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,bit.ly,PROXY,resolve-on-proxy
+HOST-SUFFIX,ift.tt,PROXY,resolve-on-proxy
+HOST-SUFFIX,btshoufa.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,github.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,live.com,PROXY
+HOST-SUFFIX,hotmail.com,PROXY
+HOST-SUFFIX,sharepoint.com,PROXY
+USER-AGENT,Microsoft Office*,PROXY
+HOST-KEYWORD,microsoft,PROXY
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
+HOST-KEYWORD,amazon,PROXY,resolve-on-proxy
+HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
+HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
+HOST-KEYWORD,fbcdn,PROXY,resolve-on-proxy
+HOST-KEYWORD,facebook,PROXY,resolve-on-proxy
+HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
+HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
+HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
+HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
+HOST-KEYWORD,beetalk,PROXY,resolve-on-proxy
+HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
+HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
+HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
+HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
+HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
+HOST-SUFFIX,akamai.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,autodraw.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,bandwagon.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,blogblog.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,chromeexperiments.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,creativelab5.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,crittercism.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,culturalspot.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,dartlang.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,fb.me,PROXY,resolve-on-proxy
+HOST-SUFFIX,fbcdn.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,fbsbx.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,gcr.io,PROXY,resolve-on-proxy
+HOST-SUFFIX,gosetsuden.jp,PROXY,resolve-on-proxy
+HOST-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,gwtproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,heroku.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,html5rocks.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,keyhole.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,kobo.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,kobobooks.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,madewithcode.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,material.io,PROXY,resolve-on-proxy
+HOST-SUFFIX,messenger.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,netmarble.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,nianticlabs.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,pinimg.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,pubnub.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,t.co,PROXY,resolve-on-proxy
+HOST-SUFFIX,tensorflow.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,thefacebook.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,toggleable.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,torproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
+HOST-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
+HOST-KEYWORD,google,PROXY,resolve-on-proxy
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.0.0/16,PROXY,no-resolve
+IP-CIDR,91.108.0.0/16,PROXY,no-resolve
+HOST-SUFFIX,v2ex.com,PROXY
 FINAL,PROXY
-[HOST-SUFFIX]
-[SSID Setting]
-
 
 
 
