--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,9 +1,13 @@
+# Shadowrocket: 2018-11-03 07:30:52
 [General]
 bypass-system = true
 dns-server = system
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
+
+
 [Rule]
+DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN,audid-api.taobao.com,REJECT
 DOMAIN-SUFFIX,btrace.qq.com,REJECT
@@ -451,17 +455,13 @@ DOMAIN-SUFFIX,lxysh.co,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,36krcnd.com,DIRECT
-// Google
 IP-CIDR,173.194.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.0.0/16,PROXY,no-resolve
-
-// BBC
 USER-AGENT,BBCiPlayer*,PROXY
 DOMAIN-KEYWORD,co.uk,PROXY
 DOMAIN-KEYWORD,uk-live,PROXY
 DOMAIN-SUFFIX,bbc.co,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY
-
 DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,speedtest,PROXY
 DOMAIN-SUFFIX,playno1.com,PROXY
@@ -579,9 +579,10 @@ IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 DOMAIN-SUFFIX,v2ex.com,PROXY
 FINAL,PROXY
-[Host]
+
+
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
-[Header Rewrite]
-[SSID Setting]
+
+
