--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -41,42 +41,36 @@ HOST,audid-api.taobao.com,REJECT
 HOST-SUFFIX,appodeal.com,REJECT
 HOST-SUFFIX,applvn.com,REJECT
 HOST,audid-api.taobao.com,REJECT
-HOST-SUFFIX,btrace.qq.com,REJECT
-HOST-SUFFIX,e.qq.com,REJECT
-HOST-SUFFIX,l.qq.com,REJECT
-HOST-SUFFIX,mi.gdt.qq.com,REJECT
-HOST-SUFFIX,mtrace.qq.com,REJECT
-HOST-SUFFIX,pingma.qq.com,REJECT
-HOST-SUFFIX,googletagservices.com,REJECT
+HOST,googletagservices.com,REJECT
 HOST,www.gstatic.com,REJECT
-HOST-SUFFIX,31.media.tumblr.com,REJECT
-HOST-SUFFIX,92x.tumblr.com,REJECT
-HOST-SUFFIX,its-dori.tumblr.com,REJECT
-HOST-SUFFIX,tumblrprobes.cedexis.com,REJECT
-HOST-SUFFIX,tumblrreports.cedexis.com,REJECT
-HOST-SUFFIX,p.twitter.com,REJECT
-HOST-SUFFIX,scribe.twitter.com,REJECT
-HOST-SUFFIX,syndication.twitter.com,REJECT
-HOST-SUFFIX,syndication-o.twitter.com,REJECT
-HOST-SUFFIX,urls.api.twitter.com,REJECT
-HOST-SUFFIX,btrace.qq.com,REJECT
-HOST-SUFFIX,e.qq.com,REJECT
-HOST-SUFFIX,l.qq.com,REJECT
-HOST-SUFFIX,mi.gdt.qq.com,REJECT
-HOST-SUFFIX,mtrace.qq.com,REJECT
-HOST-SUFFIX,pingma.qq.com,REJECT
-HOST-SUFFIX,acs4baichuan.m.taobao.com,REJECT
-HOST-SUFFIX,adash.man.aliyuncs.com,REJECT
-HOST-SUFFIX,adashbc.ut.taobao.com,REJECT
-HOST-SUFFIX,adash-c.ut.taobao.com,REJECT
-HOST-SUFFIX,adashxgc.ut.taobao.com,REJECT
-HOST-SUFFIX,apoll.m.taobao.com,REJECT
-HOST-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
-HOST-SUFFIX,c-nfa.jd.com,REJECT
-HOST-SUFFIX,cps.360buy.com,REJECT
-HOST-SUFFIX,jzt.jd.com,REJECT
-HOST-SUFFIX,stat.m.jd.com,REJECT
-HOST-SUFFIX,img-x.jd.com,REJECT
+HOST,31.media.tumblr.com,REJECT
+HOST,92x.tumblr.com,REJECT
+HOST,its-dori.tumblr.com,REJECT
+HOST,tumblrprobes.cedexis.com,REJECT
+HOST,tumblrreports.cedexis.com,REJECT
+HOST,p.twitter.com,REJECT
+HOST,scribe.twitter.com,REJECT
+HOST,syndication.twitter.com,REJECT
+HOST,syndication-o.twitter.com,REJECT
+HOST,urls.api.twitter.com,REJECT
+HOST,btrace.qq.com,REJECT
+HOST,e.qq.com,REJECT
+HOST,l.qq.com,REJECT
+HOST,mi.gdt.qq.com,REJECT
+HOST,mtrace.qq.com,REJECT
+HOST,pingma.qq.com,REJECT
+HOST,acs4baichuan.m.taobao.com,REJECT
+HOST,adash.man.aliyuncs.com,REJECT
+HOST,adashbc.ut.taobao.com,REJECT
+HOST,adash-c.ut.taobao.com,REJECT
+HOST,adashxgc.ut.taobao.com,REJECT
+HOST,apoll.m.taobao.com,REJECT
+HOST,nbsdk-baichuan.alicdn.com,REJECT
+HOST,c-nfa.jd.com,REJECT
+HOST,cps.360buy.com,REJECT
+HOST,jzt.jd.com,REJECT
+HOST,stat.m.jd.com,REJECT
+HOST,img-x.jd.com,REJECT
 HOST,aoscdn.amap.com,REJECT
 HOST,page.amap.com,REJECT
 HOST,sync.amap.com,REJECT
@@ -90,9 +84,9 @@ HOST,store.is.autonavi.com,REJECT
 HOST,sns.amap.com,REJECT
 HOST,umdc.aliapp.org,REJECT
 HOST,iconfactory.com,REJECT
-HOST-SUFFIX,ehg-youtube.hitbox.com,REJECT
-HOST-SUFFIX,nicorette.co.kr,REJECT
-HOST-SUFFIX,youtube.112.2o7.net,REJECT
+HOST,ehg-youtube.hitbox.com,REJECT
+HOST,nicorette.co.kr,REJECT
+HOST,youtube.112.2o7.net,REJECT
 HOST,ogma.iad.appboy.com,REJECT
 HOST-SUFFIX,hockeyapp.net,REJECT
 HOST-SUFFIX,flurry.com,REJECT
@@ -106,12 +100,9 @@ HOST-SUFFIX,aerserv.com,REJECT
 HOST-SUFFIX,alipaylog.com,REJECT
 HOST-SUFFIX,appadhoc.com,REJECT
 HOST-SUFFIX,appsflyer.com,REJECT
-HOST-KEYWORD,cnzz,REJECT
 HOST-SUFFIX,cocounion.com,REJECT
 HOST-SUFFIX,crwdcntrl.net,REJECT
 HOST-SUFFIX,ctrmi.com,REJECT
-HOST-KEYWORD,doubleclick,REJECT
-HOST-KEYWORD,analytics,REJECT
 HOST-SUFFIX,googlesyndication.com,REJECT
 HOST-SUFFIX,growingio.com,REJECT
 HOST-SUFFIX,inmobi.cn,REJECT
@@ -119,7 +110,6 @@ HOST-SUFFIX,inmobi.com,REJECT
 HOST-SUFFIX,irs01.com,REJECT
 HOST-SUFFIX,kejet.net,REJECT
 HOST-SUFFIX,miaozhen.com,REJECT
-HOST-SUFFIX,mobileapptracking.com,REJECT
 HOST-SUFFIX,mopub.com,REJECT
 HOST-SUFFIX,qchannel01.cn,REJECT
 HOST-SUFFIX,rayjump.com,REJECT
@@ -129,8 +119,6 @@ HOST-SUFFIX,talkingdata.com,REJECT
 HOST-SUFFIX,tanx.com,REJECT
 HOST-SUFFIX,tuanxue360.net,REJECT
 HOST-SUFFIX,udrig.com,REJECT
-HOST-KEYWORD,umeng,REJECT
-HOST-SUFFIX,umengcloud.com,REJECT
 HOST-SUFFIX,xdrig.com,REJECT
 HOST,ad.12306.cn,REJECT
 HOST,ad.caiyunapp.com,REJECT
@@ -141,12 +129,10 @@ HOST,adplatform.vrtcal.com,REJECT
 HOST,adui.tg.meitu.com,REJECT
 HOST,adxserver.ad.cmvideo.cn,REJECT
 HOST,cdn.segment.com,REJECT
-HOST,data.flurry.com,REJECT
 HOST,ggs.myzaker.com,REJECT
 HOST,js.users.51.la,REJECT
 HOST,static.jpush.cn,REJECT
 HOST,sugar.zhihu.com,REJECT
-HOST,track.58.com,REJECT
 HOST-SUFFIX,baidustatic.com,REJECT
 HOST,hm.baidu.com,REJECT
 HOST,hmma.baidu.com,REJECT
@@ -157,19 +143,6 @@ HOST,offnavi.map.baidu.com,REJECT
 HOST,newvector.map.baidu.com,REJECT
 HOST,ulog.imap.baidu.com,REJECT
 HOST,newloc.map.n.shifen.com,REJECT
-HOST,acs4baichuan.m.taobao.com,REJECT
-HOST,adash-c.ut.taobao.com,REJECT
-HOST,adashxgc.ut.taobao.com,REJECT
-HOST,adashbc.ut.taobao.com,REJECT
-HOST,adash.man.aliyuncs.com,REJECT
-HOST,apoll.m.taobao.com,REJECT
-HOST-SUFFIX,e.qq.com,REJECT
-HOST-SUFFIX,l.qq.com,REJECT
-HOST,pingma.qq.com,REJECT
-HOST,mi.gdt.qq.com,REJECT
-HOST,btrace.qq.com,REJECT
-HOST,mtrace.qq.com,REJECT
-HOST-SUFFIX,analytics.126.net,REJECT
 HOST,iadmat.nosdn.127.net,REJECT
 HOST,static.ws.126.net,REJECT
 HOST,nbsdk-baichuan.alicdn.com,REJECT
@@ -181,10 +154,10 @@ IP-CIDR,101.227.97.240/32,REJECT,no-resolve
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-HOST-SUFFIX,atm.youku.com,REJECT
+HOST,atm.youku.com,REJECT
 HOST,ad.mobile.youku.com,REJECT
 HOST,iyes.youku.com,REJECT
-HOST-SUFFIX,aty.sohu.com,REJECT
+HOST,aty.sohu.com,REJECT
 HOST,imp.optaim.com,REJECT
 HOST,v2.reachmax.cn,REJECT
 HOST,data.vod.itc.cn,REJECT
@@ -194,9 +167,7 @@ HOST,ad.api.moji.com,REJECT
 HOST,v1.log.moji.com,REJECT
 HOST,regist.fotoable.com,REJECT
 HOST,cdn.adapi.fotoable.com,REJECT
-HOST,adtrack.ucweb.com,REJECT
 HOST,applogios.uc.cn,REJECT
-HOST,track.uc.cn,REJECT
 HOST-SUFFIX,17gouwuba.com,REJECT
 HOST-SUFFIX,285680.com,REJECT
 HOST-SUFFIX,51chumoping.com,REJECT
@@ -253,24 +224,22 @@ HOST-SUFFIX,xmindchina.net,REJECT
 HOST-SUFFIX,xshellcn.com,REJECT
 HOST-SUFFIX,yuanchengxiezuo.com,REJECT
 HOST-SUFFIX,zbrushcn.com,REJECT
-HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
-HOST-SUFFIX,zkres.myzaker.com,REJECT
-HOST-SUFFIX,ggs.myzaker.com,REJECT
-HOST-SUFFIX,t.h5data.com,REJECT
-HOST-SUFFIX,oimageb4.ydstatic.com,REJECT
-HOST-SUFFIX,appuse.ifjing.com,REJECT
-HOST-KEYWORD,track,REJECT
-HOST-SUFFIX,oimagec8.ydstatic.com,REJECT
+HOST,fc-feed.cdn.bcebos.com,REJECT
+HOST,zkres.myzaker.com,REJECT
+HOST,ggs.myzaker.com,REJECT
+HOST,t.h5data.com,REJECT
+HOST,oimageb4.ydstatic.com,REJECT
+HOST,appuse.ifjing.com,REJECT
+HOST,oimagec8.ydstatic.com,REJECT
 HOST,csi.gstatic.com,REJECT
 HOST,graph.facebook.com,REJECT
-HOST-KEYWORD,mopub,REJECT
 USER-AGENT,wpsoffice*,REJECT
 HOST-SUFFIX,kingsoft-office-service.com,REJECT
 HOST,tqtdata1.weathercn.com,REJECT
 HOST,tqtdata.weathercn.com,REJECT
 HOST-SUFFIX,mob.com,REJECT
-HOST-SUFFIX,stats.mlinks.cc,REJECT
-HOST-SUFFIX,sugar.zhihu.com,REJECT
+HOST,stats.mlinks.cc,REJECT
+HOST,sugar.zhihu.com,REJECT
 HOST,badad.googleplex.com,REJECT
 HOST,afd.l.google.com,REJECT
 HOST-SUFFIX,googlecommerce.com,REJECT
@@ -294,33 +263,36 @@ HOST,s1.2mdn.net,REJECT
 HOST,adfarm.mediaplex.com,REJECT
 HOST,secure.img-cdn.mediaplex.com,REJECT
 HOST,youtube.112.2o7.net,REJECT
-HOST-SUFFIX,mr.da.netease.com,REJECT
-HOST-SUFFIX,pr.da.netease.com,REJECT
-HOST-SUFFIX,rd.da.netease.com,REJECT
-HOST-SUFFIX,stat.ws.126.net,REJECT
-HOST-SUFFIX,statis.push.netease.com,REJECT
-HOST-SUFFIX,crashlytics.163.com,REJECT
-HOST-SUFFIX,click.uve.weibo.com,REJECT
-HOST-SUFFIX,stat.360safe.com,REJECT
-HOST-SUFFIX,stat.m.360.cn,REJECT
-HOST-SUFFIX,data.bilibili.com,REJECT
-HOST-SUFFIX,cm.bilibili.com,REJECT
-HOST-SUFFIX,tc.51la.net,REJECT
-HOST-SUFFIX,51.la,REJECT
-HOST-SUFFIX,dc.csdn.net,REJECT
-HOST-SUFFIX,tracking-server-prod-1.zenmxapps.com,REJECT
-HOST-SUFFIX,dmtracking.alibaba.com,REJECT
-HOST-SUFFIX,dmtracking2.alibaba.com,REJECT
-HOST-SUFFIX,acookie.linezing.com,REJECT
-HOST-SUFFIX,hidden-master.linezing.com,REJECT
-HOST-SUFFIX,js.tongji.linezing.com,REJECT
-HOST-SUFFIX,tongji.linezing.com,REJECT
-HOST-SUFFIX,linezing.com,REJECT
-HOST-SUFFIX,report.vip.qq.com,REJECT
-HOST-SUFFIX,report.huatuo.qq.com,REJECT
-HOST-SUFFIX,report.qcloud.com,REJECT
-HOST-SUFFIX,googletagmanager.com,REJECT
-HOST-SUFFIX,hpd.baidu.com,REJECT
+HOST,mr.da.netease.com,REJECT
+HOST,pr.da.netease.com,REJECT
+HOST,rd.da.netease.com,REJECT
+HOST,stat.ws.126.net,REJECT
+HOST,statis.push.netease.com,REJECT
+HOST,crashlytics.163.com,REJECT
+HOST,click.uve.weibo.com,REJECT
+HOST,stat.360safe.com,REJECT
+HOST,stat.m.360.cn,REJECT
+HOST,data.bilibili.com,REJECT
+HOST,cm.bilibili.com,REJECT
+HOST,tc.51la.net,REJECT
+HOST,51.la,REJECT
+HOST,dc.csdn.net,REJECT
+HOST,acookie.linezing.com,REJECT
+HOST,hidden-master.linezing.com,REJECT
+HOST,js.tongji.linezing.com,REJECT
+HOST,tongji.linezing.com,REJECT
+HOST,linezing.com,REJECT
+HOST,report.vip.qq.com,REJECT
+HOST,report.huatuo.qq.com,REJECT
+HOST,report.qcloud.com,REJECT
+HOST,googletagmanager.com,REJECT
+HOST-KEYWORD,cnzz,REJECT
+HOST-KEYWORD,doubleclick,REJECT
+HOST-KEYWORD,analytics,REJECT
+HOST-KEYWORD,umeng,REJECT
+HOST-KEYWORD,track,REJECT
+HOST,hpd.baidu.com,REJECT
+HOST-KEYWORD,mopub,REJECT
 HOST-KEYWORD,admarvel,REJECT
 HOST-KEYWORD,admaster,REJECT
 HOST-KEYWORD,admdfs,REJECT
@@ -489,12 +461,9 @@ HOST-SUFFIX,36krcnd.com,DIRECT
 IP-CIDR,173.194.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 USER-AGENT,BBCiPlayer*,PROXY
-HOST-KEYWORD,co.uk,PROXY
-HOST-KEYWORD,uk-live,PROXY
 HOST-SUFFIX,bbc.co,PROXY
 HOST-SUFFIX,bbc.com,PROXY
 HOST-SUFFIX,feedly.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,speedtest,PROXY
 HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,qrrro.com,PROXY
 HOST-SUFFIX,sub.ssr.sx,PROXY
@@ -510,6 +479,9 @@ HOST-SUFFIX,sharepoint.com,PROXY
 USER-AGENT,Microsoft Office*,PROXY
 HOST-KEYWORD,microsoft,PROXY
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
+HOST-KEYWORD,co.uk,PROXY
+HOST-KEYWORD,uk-live,PROXY
+HOST-KEYWORD,speedtest,PROXY
 HOST-KEYWORD,amazon,PROXY,resolve-on-proxy
 HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
 HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
@@ -524,6 +496,7 @@ HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
 HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
 HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
 HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
+HOST-KEYWORD,google,PROXY,resolve-on-proxy
 HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
 HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
 HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
@@ -568,7 +541,6 @@ HOST-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
 HOST-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
 HOST-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
 HOST-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
-HOST-KEYWORD,google,PROXY,resolve-on-proxy
 IP-CIDR,13.32.0.0/16,PROXY,no-resolve
 IP-CIDR,13.33.0.0/16,PROXY,no-resolve
 IP-CIDR,13.35.0.0/17,PROXY,no-resolve
@@ -590,8 +562,6 @@ IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 HOST-SUFFIX,v2ex.com,PROXY
 FINAL,PROXY
-
-
 
 
 
