--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -365,14 +365,14 @@ DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.tv,DIRECT
-DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
+GEOIP,cn,DIRECT
+GEOIP,private,DIRECT
+DOMAIN-KEYWORD,geosite:cn,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
-GEOIP,CN,DIRECT
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
 IP-CIDR,198.11.189.2/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,lxysh.co,DIRECT
