--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -9,6 +9,61 @@
 
 [URL-REJECTION]
 [TCP]
+//Apple
+IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT
+DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
+USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
+USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选择DIRECT
+USER-AGENT,cloudd*,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-KEYWORD,icloud,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
+
+//定位相关
+USER-AGENT,com.apple.geod*,DIRECT
+USER-AGENT,com.apple.Maps,DIRECT
+USER-AGENT,FindMyFriends*,DIRECT
+USER-AGENT,FindMyiPhone*,DIRECT
+USER-AGENT,FMDClient*,DIRECT
+USER-AGENT,FMFD*,DIRECT
+USER-AGENT,fmflocatord*,DIRECT
+USER-AGENT,geod*,DIRECT
+USER-AGENT,locationd*,DIRECT
+USER-AGENT,Maps*,DIRECT
+//支付相关
+USER-AGENT,*Passbook*,DIRECT
+USER-AGENT,passd*,DIRECT
+USER-AGENT,seld*,DIRECT
+USER-AGENT,trustd*,DIRECT
+USER-AGENT,Wallet/1.0*,DIRECT
+//Siri
+USER-AGENT,*AssistantServices*,DIRECT
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
+
+DOMAIN,api.smoot.apple.com.cn,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
+DOMAIN,smp-device.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN,sp.itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
+DOMAIN-SUFFIX,ls.apple.com,DIRECT
+
 HOST-SUFFIX,hotmail.com,PROXY
 HOST-KEYWORD,adservice,REJECT
 HOST-KEYWORD,analytics,REJECT
@@ -442,16 +497,6 @@ IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-HOST-SUFFIX,aaplimg.com,DIRECT
-HOST-SUFFIX,apple.co,DIRECT
-HOST-SUFFIX,apple.com,DIRECT
-HOST-SUFFIX,appstore.com,DIRECT
-HOST-SUFFIX,cdn-apple.com,DIRECT
-HOST-SUFFIX,crashlytics.com,DIRECT
-HOST-SUFFIX,icloud.com,DIRECT
-HOST-SUFFIX,icloud-content.com,DIRECT
-HOST-SUFFIX,me.com,DIRECT
-HOST-SUFFIX,mzstatic.com,DIRECT
 HOST-SUFFIX,storage.live.com,DIRECT//OneDrive
 HOST-SUFFIX,1drv.com,DIRECT//OneDrive
 HOST,officecdn-microsoft-com.akamaized.net,DIRECT//Microsoft AutoUpdate
@@ -478,14 +523,13 @@ HOST,ip.bjango.com,DIRECT//iStat Menu
 HOST-SUFFIX,fast.com,DIRECT
 HOST-SUFFIX,netspeedtestmaster.com,DIRECT
 HOST-SUFFIX,speedtest.net,DIRECT
-HOST-SUFFIX,akadns.net,DIRECT//Apple services
 HOST-SUFFIX,cloudflare.com,DIRECT
 HOST-SUFFIX,jd.hk,DIRECT
 HOST-SUFFIX,maoyun.tv,DIRECT
 HOST-SUFFIX,teamviewer.com,DIRECT
-USER-AGENT,NeteaseMusic*,DIRECT
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,DIRECT
 HOST-SUFFIX,local,DIRECT
+IP-CIDR,134.175.0.0/16,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
