--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -494,8 +494,8 @@ IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 HOST-SUFFIX,storage.live.com,DIRECT//OneDrive
 HOST-SUFFIX,1drv.com,DIRECT//OneDrive
 HOST,officecdn-microsoft-com.akamaized.net,DIRECT//Microsoft AutoUpdate
-USER-AGENT,MicroMessenger Client,DIRECT//WeChat
-USER-AGENT,WeChat*,DIRECT//WeChat
+USER-AGENT,MicroMessenger Client,DIRECT
+USER-AGENT,WeChat*,DIRECT
 HOST-SUFFIX,blizzard.com,DIRECT
 HOST-SUFFIX,battle.net,DIRECT
 HOST,blzddist1-a.akamaihd.net,DIRECT
