--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -65,6 +65,15 @@ DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 HOST-SUFFIX,hotmail.com,PROXY
+
+DOMAIN,aoscdn.amap.com,REJECT
+DOMAIN,page.amap.com,REJECT
+DOMAIN,sync.amap.com,REJECT
+DOMAIN,mps.amap.com,REJECT
+DOMAIN,aos-cdn-image.amap.com,REJECT
+DOMAIN,wb.amap.com,REJECT
+DOMAIN,f.amap.com,REJECT
+
 HOST-KEYWORD,adservice,REJECT
 HOST-KEYWORD,analytics,REJECT
 HOST-SUFFIX,3lift.com,REJECT
