--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -66,6 +66,8 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 HOST-SUFFIX,hotmail.com,PROXY
 
+USER-AGENT,wpsoffice*,REJECT
+HOST-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
