--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -14,8 +14,6 @@ IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT
 DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
 USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
 USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,cloudd*,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,icloud,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
@@ -24,8 +22,6 @@ DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
 
@@ -51,6 +47,11 @@ USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
+
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
+USER-AGENT,cloudd*,DIRECT
+DOMAIN-KEYWORD,icloud,DIRECT
 
 DOMAIN,api.smoot.apple.com.cn,DIRECT
 DOMAIN,captive.apple.com,DIRECT
@@ -245,20 +246,7 @@ HOST,stats.umsns.com,REJECT
 HOST,s0.2mdn.net,REJECT
 HOST,appnext.hs.llnwd.net,REJECT
 HOST,abema-adx.ameba.jp,REJECT
-HOST,ad.12306.cn,REJECT
 HOST,ad.caiyunapp.com,REJECT
-HOST,ad.huajiao.com,REJECT
-HOST,ad.hzyoka.com,REJECT
-HOST,ad.jiemian.com,REJECT
-HOST,ad.qingting.fm,REJECT
-HOST,ad-cn.jovcloud.com,REJECT
-HOST,adnew.wifi8.com,REJECT
-HOST,adsapi.manhuaren.com,REJECT
-HOST,adsdk.dmzj.com,REJECT
-HOST,adshow.58.com,REJECT
-HOST,adshows.21cn.com,REJECT
-HOST,adui.tg.meitu.com,REJECT
-HOST,adxserver.ad.cmvideo.cn,REJECT
 HOST,app-ad.variflight.com,REJECT
 HOST,applog.mobike.com,REJECT
 HOST,ggs.myzaker.com,REJECT
