--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5,6 +5,7 @@
 [PROJECTION]
 //在此处配置无线网络环境下的代理模式，参考如下配置。
 [DNS]
+system, 119.29.29.29,  223.5.5.5
 [REWRITE]
 
 [URL-REJECTION]
@@ -484,15 +485,16 @@ HOST-SUFFIX,youtu.be,PROXY
 HOST-SUFFIX,yt.be,PROXY
 HOST-SUFFIX,ytimg.com,PROXY
 HOST-SUFFIX,fb.com,PROXY
-HOST-SUFFIX,bing.com,PROXY//Bing International
+HOST-SUFFIX,newsblur.com,PROXY
+HOST-SUFFIX,bing.com,PROXY
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-HOST-SUFFIX,storage.live.com,DIRECT//OneDrive
-HOST-SUFFIX,1drv.com,DIRECT//OneDrive
-HOST,officecdn-microsoft-com.akamaized.net,DIRECT//Microsoft AutoUpdate
+HOST-SUFFIX,storage.live.com,DIRECT//Microsoft
+HOST-SUFFIX,1drv.com,DIRECT//Microsoft
+HOST,officecdn-microsoft-com.akamaized.net,DIRECT//Microsoft
 USER-AGENT,MicroMessenger Client,DIRECT
 USER-AGENT,WeChat*,DIRECT
 HOST-SUFFIX,blizzard.com,DIRECT
@@ -512,7 +514,7 @@ HOST,classroom.udacity.com,DIRECT
 HOST-SUFFIX,ip.cn,DIRECT
 HOST-SUFFIX,ip-cdn.com,DIRECT
 HOST-SUFFIX,test-ipv6.com,DIRECT
-HOST,ip.bjango.com,DIRECT//iStat Menu
+HOST,ip.bjango.com,DIRECT
 HOST-SUFFIX,fast.com,DIRECT
 HOST-SUFFIX,netspeedtestmaster.com,DIRECT
 HOST-SUFFIX,speedtest.net,DIRECT
