--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5,7 +5,7 @@
 [PROJECTION]
 //在此处配置无线网络环境下的代理模式，参考如下配置。
 [DNS]
-system, 119.29.29.29,  223.5.5.5
+
 [REWRITE]
 
 [URL-REJECTION]
@@ -339,6 +339,41 @@ HOST,track.sohu.com,REJECT
 HOST,ad-stat.ksosoft.com,REJECT
 HOST,img.auction-ads.wpscdn.cn,REJECT
 HOST,minfo.wps.cn,REJECT
+
+//Google
+DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
+DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+// Microsoft
+USER-AGENT,Microsoft*,选择微软服务的策略，不懂就选择DIRECT
+USER-AGENT,OneDrive*,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-KEYWORD,microsoft,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,docs.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,hotmail.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,microsoft.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,msedge.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,msn.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,office365.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,onedrive.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,outlook.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,visualstudio.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.com,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.net,选择微软服务的策略，不懂就选择DIRECT
+DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的策略，不懂就选择DIRECT
+
+PROCESS-NAME,Telegram,PROXY
+USER-AGENT,*Telegram*,PROXY
+
 USER-AGENT,*youtube*,PROXY
 USER-AGENT,YouTube*,PROXY
 HOST-SUFFIX,googlevideo.com,PROXY,resolve-on-proxy
@@ -487,14 +522,17 @@ HOST-SUFFIX,ytimg.com,PROXY
 HOST-SUFFIX,fb.com,PROXY
 HOST-SUFFIX,newsblur.com,PROXY
 HOST-SUFFIX,bing.com,PROXY
-IP-CIDR,91.108.4.0/22,PROXY,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-HOST-SUFFIX,storage.live.com,DIRECT//Microsoft
-HOST-SUFFIX,1drv.com,DIRECT//Microsoft
-HOST,officecdn-microsoft-com.akamaized.net,DIRECT//Microsoft
+IP-CIDR,149.154.164.0/22,PROXY,no-resolve
+IP-CIDR,149.154.168.0/22,PROXY,no-resolve
+IP-CIDR,149.154.172.0/22,PROXY,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/23,PROXY,no-resolve
+IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
+IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
+IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
+
 USER-AGENT,MicroMessenger Client,DIRECT
 USER-AGENT,WeChat*,DIRECT
 HOST-SUFFIX,blizzard.com,DIRECT
@@ -522,7 +560,8 @@ HOST-SUFFIX,cloudflare.com,DIRECT
 HOST-SUFFIX,jd.hk,DIRECT
 HOST-SUFFIX,maoyun.tv,DIRECT
 HOST-SUFFIX,teamviewer.com,DIRECT
-USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,DIRECT
+USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
+USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 HOST-SUFFIX,local,DIRECT
 IP-CIDR,134.175.0.0/16,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
