--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -10,6 +10,27 @@
 
 [URL-REJECTION]
 [TCP]
+//me
+HOST-SUFFIX,ssr.ac,PROXY
+HOST-SUFFIX,cordcloud.me,PROXY
+HOST-SUFFIX,cloudfront.net,DIRECT
+HOST-SUFFIX,pthome.net,DIRECT
+HOST-SUFFIX,github.com,PROXY
+IP-CIDR,120.92.33.171/32,REJECT
+HOST-SUFFIX,wps.cn,REJECT
+HOST-SUFFIX,kingsoft-office-service.com,REJECT
+HOST-SUFFIX,ksosoft.com,REJECT
+USER-AGENT,wpsoffice*,REJECT
+HOST-SUFFIX,culturedcode.com,DIRECT
+HOST-SUFFIX,zaobao.com,PROXY
+HOST-SUFFIX,newsblur.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,inner-active.mobi,REJECT
+HOST,x.appbaqend.com,REJECT
+HOST-SUFFIX,crashlytics.com,DIRECT
+HOST-SUFFIX,applovin.com,REJECT
+HOST,union.uc.cn,REJECT
+HOST-SUFFIX,1password.com,PROXY
+
 //Apple
 IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT
 DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
@@ -68,8 +89,6 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 HOST-SUFFIX,hotmail.com,PROXY
 
-USER-AGENT,wpsoffice*,REJECT
-HOST-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
