--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -11,12 +11,16 @@
 [URL-REJECTION]
 [TCP]
 //me
+HOST-SUFFIX,newsblur.com,PROXY
+HOST-SUFFIX,bing.com,PROXY
 HOST-SUFFIX,ssr.ac,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,cloudfront.net,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
-HOST-SUFFIX,github.com,PROXY
+HOST-KEYWORD,github,PROXY
 IP-CIDR,120.92.33.171/32,REJECT
+HOST,ad-stat.ksosoft.com,REJECT
+HOST,img.auction-ads.wpscdn.cn,REJECT
 HOST-SUFFIX,wps.cn,REJECT
 HOST-SUFFIX,kingsoft-office-service.com,REJECT
 HOST-SUFFIX,ksosoft.com,REJECT
@@ -32,7 +36,6 @@ HOST,union.uc.cn,REJECT
 HOST-SUFFIX,1password.com,PROXY
 
 //Apple
-IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT
 DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
 USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
 USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选择DIRECT
@@ -70,6 +73,7 @@ USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
+IP-CIDR,17.0.0.0/8,DIRECT
 DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 USER-AGENT,cloudd*,DIRECT
@@ -353,13 +357,11 @@ HOST-SUFFIX,aty.sohu.com,REJECT
 HOST,imp.optaim.com,REJECT
 HOST,v2.reachmax.cn,REJECT
 HOST,track.sohu.com,REJECT
-HOST,ad-stat.ksosoft.com,REJECT
-HOST,img.auction-ads.wpscdn.cn,REJECT
-HOST,minfo.wps.cn,REJECT
 
 //Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+
 // Microsoft
 USER-AGENT,Microsoft*,选择微软服务的策略，不懂就选择DIRECT
 USER-AGENT,OneDrive*,选择微软服务的策略，不懂就选择DIRECT
@@ -399,8 +401,8 @@ HOST,youtubei.googleapis.com,PROXY,resolve-on-proxy
 USER-AGENT,BBCiPlayer*,PROXY
 HOST-SUFFIX,bbc.co.uk,PROXY,resolve-on-proxy
 HOST-SUFFIX,bbci.co.uk,PROXY,resolve-on-proxy
-HOST-KEYWORD,bbcfmt,PROXY
-HOST-KEYWORD,uk-live,PROXY
+HOST-KEYWORD,bbcfmt,PROXY,resolve-on-proxy
+HOST-KEYWORD,uk-live,PROXY,resolve-on-proxy
 HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,blogger.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,getoutline.org,PROXY,resolve-on-proxy
@@ -537,8 +539,7 @@ HOST-SUFFIX,youtu.be,PROXY
 HOST-SUFFIX,yt.be,PROXY
 HOST-SUFFIX,ytimg.com,PROXY
 HOST-SUFFIX,fb.com,PROXY
-HOST-SUFFIX,newsblur.com,PROXY
-HOST-SUFFIX,bing.com,PROXY
+
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
 IP-CIDR,149.154.168.0/22,PROXY,no-resolve
@@ -552,8 +553,6 @@ IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
 
 USER-AGENT,MicroMessenger Client,DIRECT
 USER-AGENT,WeChat*,DIRECT
-HOST-SUFFIX,blizzard.com,DIRECT
-HOST-SUFFIX,battle.net,DIRECT
 HOST,blzddist1-a.akamaihd.net,DIRECT
 HOST-SUFFIX,steampowered.com,DIRECT
 HOST-SUFFIX,steam-chat.com,DIRECT
