--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -466,7 +466,7 @@ HOST-SUFFIX,nytstyle.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,ok.ru,PROXY,resolve-on-proxy
 HOST-SUFFIX,okex.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,pinterest.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
+HOST-KEYWORD,pixiv,PROXY,resolve-on-proxy
 HOST-SUFFIX,quora.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,reddit.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,redditmedia.com,PROXY,resolve-on-proxy
@@ -509,12 +509,9 @@ HOST-SUFFIX,debug.com,PROXY
 HOST-SUFFIX,deepmind.com,PROXY
 HOST-SUFFIX,firebaseio.com,PROXY
 HOST-SUFFIX,getmdl.io,PROXY
-HOST-SUFFIX,ggpht.com,PROXY
-HOST-SUFFIX,gmail.com,PROXY
 HOST-SUFFIX,gmodules.com,PROXY
 HOST-SUFFIX,godoc.org,PROXY
 HOST-SUFFIX,golang.org,PROXY
-HOST-SUFFIX,gstatic.com,PROXY
 HOST-SUFFIX,gv.com,PROXY
 HOST-SUFFIX,gwtproject.org,PROXY
 HOST-SUFFIX,itasoftware.com,PROXY
@@ -535,10 +532,20 @@ HOST-SUFFIX,whatbrowser.org,PROXY
 HOST-SUFFIX,widevine.com,PROXY
 HOST-SUFFIX,x.company,PROXY
 HOST-SUFFIX,xn—ngstr-lra8j.com,PROXY
-HOST-SUFFIX,youtu.be,PROXY
-HOST-SUFFIX,yt.be,PROXY
-HOST-SUFFIX,ytimg.com,PROXY
-HOST-SUFFIX,fb.com,PROXY
+
+DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,google.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,googleapis.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
+DOMAIN-KEYWORD,google,PROXY,force-remote-dns
+DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
+DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
+
+HOST-SUFFIX,fb.com,PROXY,force-remote-dns
 
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
