--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -9,6 +9,11 @@
 [REWRITE]
 
 [URL-REJECTION]
+// URL
+
+// Google_Service_HTTPS_Jump
+^https?://(www.)?g.cn https://www.google.com 302
+^https?://(www.)?google.cn https://www.google.com 302
 [TCP]
 //me
 HOST-SUFFIX,newsblur.com,PROXY
