--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -16,8 +16,17 @@
 ^https?://(www.)?google.cn https://www.google.com 302
 [TCP]
 //me
-HOST-SUFFIX,newsblur.com,PROXY
-HOST-SUFFIX,bing.com,PROXY
+HOST-SUFFIX,v2ex.com,PROXY
+HOST-SUFFIX,appodeal.com,REJECT
+HOST-SUFFIX,applvn.com,REJECT
+HOST-SUFFIX,tlnk.io,REJECT
+HOST,track.tenjin.io,REJECT
+HOST,ios.rqd.qq.com,REJECT
+IP-CIDR,183.61.0.0/12,REJECT
+IP-CIDR,183.3.0.0/12,REJECT
+HOST-SUFFIX,mtvip.net,DIRECT
+HOST-SUFFIX,bdstatic.com,REJECT
+HOST-SUFFIX,alexametrics.com,REJECT
 HOST-SUFFIX,ssr.ac,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,cloudfront.net,DIRECT
