--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -7,10 +7,9 @@
 [DNS]
 
 [REWRITE]
+^https?://(www.)?g.cn url 302 https://www.google.com
+^https?://(www.)?google.cn url 302 https://www.google.com
 
-// Google_Service_HTTPS_Jump
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
 [URL-REJECTION]
 
 [TCP]
