--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -7,13 +7,15 @@
 [DNS]
 
 [REWRITE]
-^https?://(www.)?g.cn url 302 https://www.google.com
-^https?://(www.)?google.cn url 302 https://www.google.com
+^https?://(www.)?g.cn url 302 https://www.google.com.tw
+^https?://(www.)?google.cn url 302 https://www.google.com.tw
+
 
 [URL-REJECTION]
 
 [TCP]
 //me
+PROCESS-NAME,Jietu,REJECT
 HOST-SUFFIX,v2ex.com,PROXY
 HOST-SUFFIX,appodeal.com,REJECT
 HOST-SUFFIX,applvn.com,REJECT
