--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -10,6 +10,9 @@
 ^https?://(www.)?g.cn url 302 https://www.google.com.tw
 ^https?://(www.)?google.cn url 302 https://www.google.com.tw
 
+^https?://.+.(m.)?wikipedia.org/wiki url 302 http://www.wikiwand.com/en
+^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) url 302 http://www.wikiwand.com/zh
+^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} url 302 http://www.wikiwand.com/zh-hant
 
 [URL-REJECTION]
 
